[package]
name = "libp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-codec = { version = "4.0", features = ["derive"] }
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
