[package]
name = "libp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p="0.8"
parity-codec = { version = "4.0", features = ["derive"] }
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
